# telegram-bot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  Release.yml
src/: bot.rs  diff.rs  main.rs  plugin.rs
src/github/: checks.rs  compare.rs  mod.rs
