[package]
name = "bs-telegram-bot"
version = "0.4.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
env_logger = "0.7"
futures = "0.3"
itertools = "0.8"
log = "0.4"
pulldown-cmark = "0.6"
rand = "0.7"
reqwest = { version = "=0.10.0-alpha.2", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = "=0.2.0-alpha.6" # TODO: update to 0.2.x once "reqwest" is ready
