[package]
name = "bs-telegram-bot"
version = "0.7.2"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
env_logger = "0.7"
futures = "0.3"
itertools = "0.8"
log = "0.4"
pulldown-cmark = "0.6"
rand = "0.7"
reqwest = { version = "0.10", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["fs", "macros"] }
