[package]
name = "bs-telegram-bot"
version = "0.8.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
futures = "0.3"
itertools = "0.10"
log = "0.4"
pulldown-cmark = "0.9"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["fs", "macros", "rt-multi-thread"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"   
panic = 'abort'
